--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ body {
 .apresentacao {
     display: flex;
     align-items: center;
-
+    justify-content: space-between;
+    margin: 10%;
 }
-
 
 .primeiro-destaque {
     color: #22D4FD;
 }
+
 
