--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+  @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -21,3 +24,44 @@ body {
 }
 
 
+.apresentacao-conteudo {
+    width: 615px;
+}
+.img-1 {
+    width: 388px;
+    height: 450px;
+}
+
+.apresentacao-conteudo-titulo {
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
+}
+
+.apresentacao-conteudo-texto {
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.botao {
+    color: #000000;
+    font-size: 24px;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    border: 1px solid #22D4FD;
+    background: #22D4FD;
+    border-radius: 12px;
+    text-decoration: none;
+    padding: 10px 40px;
+}
+
+.botoes {
+    margin-top: 2em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+}
+
+.botoes :hover {
+    cursor: pointer;
+}
