--- a/style.css
+++ b/style.css
@@ -45,17 +45,36 @@ a{
 .apresentacao-conteudo-texto {
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
+    margin-top: 1em;
 }
 
 .botao {
     border: 2px solid #22D4FD;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 15px;
+    gap: 10px;
 }
 
 .botoes {
-
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1em;
 }
 
 .botao :hover {
     cursor: pointer;
+}
+
+.titulo-redes {
+    margin-bottom: 0.5em;
+    text-align: center;
+}
+
+.titulo-botao {
+    color: #f6f6f6;
 }
