--- a/style.css
+++ b/style.css
@@ -16,11 +16,24 @@ a {
     text-decoration: none;
 }
 
+.menu-cabecalho {
+    display: flex;
+    column-gap: 5em;
+    margin: 2em 0 0 14em;
+}
+
+.link-menu-cabecalho{
+    color: #22D4FD;
+    font-size: 24px;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .apresentacao {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10%;
+    padding: 8% 15%;
 }
 
 .primeiro-destaque {
