--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 .menu-cabecalho {
     display: flex;
     column-gap: 5em;
-    margin: 2em 0 0 14em;
+    padding: 2em 0 0 14em;
 }
 
 .link-menu-cabecalho{
@@ -27,6 +27,13 @@ a {
     font-size: 24px;
     font-weight: 400;
     font-family: 'Montserrat', sans-serif;
+    transition: 0.5s;
+}
+
+.link-menu-cabecalho:hover {
+    cursor: pointer;
+    color: #00b7ff;
+    text-decoration: underline;
 }
 
 .apresentacao {
