--- a/sobremim.css
+++ b/sobremim.css
@@ -24,7 +24,7 @@ a {
 
 .link-menu-cabecalho{
     color: #22D4FD;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     font-family: 'Montserrat', sans-serif;
     transition: 0.1s;
