--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ a{
     align-items: center;
     justify-content: space-between;
     padding: 8% 15%;
+    column-gap: 82px;
 }
 
 .primeiro-destaque {
@@ -116,4 +117,29 @@ a{
     font-weight: 400;
     color: #000000;
     text-align: center;
+}
+
+@media (max-width: 1200px) {
+    .menu-cabecalho {
+        padding: 6%;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 1020px) {
+    .apresentacao {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .img-1 {
+        margin: 5% 0;
+    }
+    
+}
+
+@media (max-width: 700px) {
+    .menu-cabecalho {
+        padding: 0;
+    }
 }
